force-app/main/default/objects/CustomerSurvey__c/CustomerSurvey__c.object-meta.xml
<CustomObject>
    <label>Pesquisa de Preço (Cliente)</label>
    <nameField>
        <displayFormat>PC-{00000000}</displayFormat>
        <label>Nome de Pesquisa de Preço (Cliente)</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pesquisas de Preço (Cliente)</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>