force-app/main/default/objects/CustomerSurvey__c/fields/AccountAreaSalesLkp__c.field-meta.xml
<CustomField>
    <fullName>AccountAreaSalesLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Área de vendas</label>
    <referenceTo>AccountAreaSales__c</referenceTo>
    <relationshipName>CustomerSurveys</relationshipName>
    <type>Lookup</type>
</CustomField>