force-app/main/default/objects/CustomerSurvey__c/fields/AccountFml__c.field-meta.xml
<CustomField>
    <fullName>AccountFml__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;+AccountAreaSalesLkp__r.AccountLkp__c, AccountAreaSalesLkp__r.AccountLkp__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conta</label>
    <type>Text</type>
</CustomField>