force-app/main/default/objects/CustomerSurvey__c/fields/AccountLkpOld__c.field-meta.xml
<CustomField>
    <fullName>AccountLkpOld__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ContaOld</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Pesquisas_do_Cliente</relationshipName>
    <type>Lookup</type>
</CustomField>