force-app/main/default/objects/CustomerSurvey__c/fields/CodeSurveyFml__c.field-meta.xml
<CustomField>
    <fullName>CodeSurveyFml__c</fullName>
    <formula>HYPERLINK(&quot;/?sort=&quot; &amp;  Name , &quot;&quot;, &apos;_self&apos;) &amp; 

HYPERLINK(&quot;/&quot; &amp; Id, Name &amp; &apos; - &apos; &amp; TradeMktSurveyLkp__r.Name, &apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pesquisa</label>
    <type>Text</type>
</CustomField>