force-app/main/default/objects/CustomerSurvey__c/fields/CoordinatorEmailTxt__c.field-meta.xml
<CustomField>
    <fullName>CoordinatorEmailTxt__c</fullName>
    <label>Email do Coordenador</label>
    <type>Email</type>
</CustomField>