force-app/main/default/objects/CustomerSurvey__c/fields/CustomerProfileTxt__c.field-meta.xml
<CustomField>
    <fullName>CustomerProfileTxt__c</fullName>
    <formula>IF(AccountAreaSalesLkp__r.RecordType.DeveloperName = &apos;Competition&apos;, &apos;Concorrente&apos;, AccountAreaSalesLkp__r.RecordType.DeveloperName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Perfil de Cliente</label>
    <type>Text</type>
</CustomField>