force-app/main/default/objects/CustomerSurvey__c/fields/IsActiveBln__c.field-meta.xml
<CustomField>
    <fullName>IsActiveBln__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ativa</label>
    <type>Checkbox</type>
</CustomField>