force-app/main/default/objects/CustomerSurvey__c/fields/LimitDateDte__c.field-meta.xml
<CustomField>
    <fullName>LimitDateDte__c</fullName>
    <label>Data Limite</label>
    <type>Date</type>
</CustomField>