force-app/main/default/objects/CustomerSurvey__c/fields/RemarkTxt__c.field-meta.xml
<CustomField>
    <fullName>RemarkTxt__c</fullName>
    <label>Observações</label>
    <type>TextArea</type>
</CustomField>