force-app/main/default/objects/CustomerSurvey__c/fields/TradeMktSurveyLkp__c.field-meta.xml
<CustomField>
    <fullName>TradeMktSurveyLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pesquisa de Preço</label>
    <referenceTo>TradeMktSurvey__c</referenceTo>
    <relationshipLabel>Pesquisas de Preço (Cliente)</relationshipLabel>
    <relationshipName>Pesquisas_do_Cliente</relationshipName>
    <type>Lookup</type>
</CustomField>