force-app/main/default/objects/CustomerSurvey__c/fields/ValidityFml__c.field-meta.xml
<CustomField>
    <fullName>ValidityFml__c</fullName>
    <formula>TradeMktSurveyLkp__r.ValidityFml__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vigência</label>
    <type>Text</type>
</CustomField>