force-app/main/default/objects/CustomerSurvey__c/validationRules/ActiveTradeMktSurvey.validationRule-meta.xml
<ValidationRule>
    <fullName>ActiveTradeMktSurvey</fullName>
    <active>true</active>
    <errorConditionFormula>TradeMktSurveyLkp__r.IsActiveBln__c == TRUE &amp;&amp;
(ISNEW() || ISCHANGED(AccountAreaSalesLkp__c))</errorConditionFormula>
    <errorMessage>Não é possível adicionar ou alterar um cliente de uma Pesquisa de Preço ativa.</errorMessage>
</ValidationRule>