force-app/main/default/objects/CustomerSurvey__c/validationRules/InvalidCustomerLimitDate.validationRule-meta.xml
<ValidationRule>
    <fullName>InvalidCustomerLimitDate</fullName>
    <active>true</active>
    <errorConditionFormula>LimitDateDte__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>LimitDateDte__c</errorDisplayField>
    <errorMessage>Defina uma data limite válida.</errorMessage>
</ValidationRule>