force-app/main/default/objects/CustomerSurvey__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CodeSurveyFml__c</columns>
    <columns>AccountAreaSalesLkp__c</columns>
    <columns>AccountFml__c</columns>
    <columns>LimitDateDte__c</columns>
    <columns>StatusTxt__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>