force-app/main/default/objects/CustomerSurvey__c/listViews/Pesquisas_Ativas_Pendentes.listView-meta.xml
<ListView>
    <fullName>Pesquisas_Ativas_Pendentes</fullName>
    <columns>CodeSurveyFml__c</columns>
    <columns>AccountAreaSalesLkp__c</columns>
    <columns>AccountFml__c</columns>
    <columns>LimitDateDte__c</columns>
    <columns>StatusTxt__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsActiveBln__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>LimitDateDte__c</field>
        <operation>greaterThan</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>StatusTxt__c</field>
        <operation>equals</operation>
        <value>Incompleta</value>
    </filters>
    <label>Pesquisas Ativas Pendentes</label>
</ListView>